# ProjectNightowl

./: Cargo.toml  README.MD  Tasks.md  build.py  run.py  rust-toolchain.toml
client/: .gitignore  Cargo.toml
client/src/: camera.rs  complex.rs  engine.rs  lib.rs  main.rs  pentagon.rs  start.rs  types.rs
client/src/complex/: complex.wgsl  mod.rs
client/src/engine/: mod.rs  time.rs  uniforms.rs
client/src/shaders/: complex.wgsl  shader.wgsl
client/src/types/: macros.rs  mod.rs
client/src/user_interface/: mod.rs  shader.wgsl
public/: index.html
src/: main.rs
