[package]
name = "web_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.15.1"
winit = "0.28.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
pollster = "0.3.0"
bytemuck = { version = "1.12.3", features = ["derive"] }
you-can = "0.0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wgpu = { version = "0.15.1", features = ["webgl"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Document", "Window", "Element"] }

[lib]
crate-type = ["cdylib", "rlib"]
